--- a/scss/_caja.scss
+++ b/scss/_caja.scss
@@ -18,19 +18,23 @@
                        
     }
     .caja2{
+        @extend .caja;
         width: 90%;
-        padding: 1rem;
+        padding-top: 1.5rem;
+        padding-left: 20rem;
+                    
+            }
         @media screen and (max-width:768px) {
             margin: 1.5rem;            
         }
         @media screen and (max-width:1440px) {
-            margin-left: 1.5rem;            
+            margin-left:1.5rem;            
          } 
         @media screen and (min-width:1440px) {
-           margin-left: 6.5rem;            
+           margin-left:6.5rem;            
         }
         
-    }
+    
     .parr{
         background-color: #485461;
         background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
